--- a/smackChat/Base.lproj/Main.storyboard
+++ b/smackChat/Base.lproj/Main.storyboard
@@ -222,6 +222,9 @@
                                 <state key="normal" title="Don't have an account? Sign up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="dm7-1a-PgP"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="fEz-rv-LEz">
                                 <rect key="frame" x="62.5" y="160" width="250" height="106"/>
@@ -268,7 +271,7 @@
                                     <constraint firstAttribute="width" constant="250" id="eag-P1-iTS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Login">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
@@ -288,16 +291,174 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yB8-S3-SIb"/>
                     </view>
+                    <connections>
+                        <segue destination="4E5-HI-FYt" kind="show" identifier="toCreateAccount" id="5ah-44-eFD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NJu-iB-aO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1588" y="-382.75862068965517"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="ZJW-45-qO0">
+            <objects>
+                <viewController id="4E5-HI-FYt" customClass="CreateAccountVC" customModule="smackChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fQF-K7-Y4P">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XeT-jG-jUG">
+                                <rect key="frame" x="107" y="60" width="161.5" height="26"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="19"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="qJ0-8c-diB">
+                                <rect key="frame" x="123" y="60" width="57" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzN-we-B5d">
+                                <rect key="frame" x="327" y="28" width="28" height="28"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closePressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="7fX-gi-C7h"/>
+                                    <action selector="closePressed:" destination="4E5-HI-FYt" eventType="touchUpInside" id="pjY-Rh-aqZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tey-c9-KZZ">
+                                <rect key="frame" x="62" y="597" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8fn-wQ-9Fg"/>
+                                    <constraint firstAttribute="width" constant="250" id="Jtr-GZ-UFd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yoh-Ep-beX">
+                                <rect key="frame" x="137.5" y="332" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="zhx-jS-8yx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                <state key="normal" title="Choose avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="8w1-3j-8j9"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="21C-9s-clw">
+                                <rect key="frame" x="62.5" y="126" width="250" height="166"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EM9-VZ-aI3">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="6iJ-oq-eHV"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E55-kQ-YoR">
+                                        <rect key="frame" x="0.0" y="44" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="w8V-UG-LvS"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8P5-k8-WH8">
+                                        <rect key="frame" x="0.0" y="60" width="250" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="X68-Zt-AqF"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PnB-Qo-vfL">
+                                        <rect key="frame" x="0.0" y="104" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="Tbl-fo-KLu"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Gt-dv-PbR">
+                                        <rect key="frame" x="0.0" y="120" width="250" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="tWK-sh-MmM"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uY2-Ac-NvF">
+                                        <rect key="frame" x="0.0" y="164" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="nhC-GQ-W8b"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="rHm-BZ-GpQ">
+                                <rect key="frame" x="137" y="332" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="CVC-dn-ID3"/>
+                                    <constraint firstAttribute="height" constant="100" id="hGm-e4-aAW"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryG-lf-FmQ">
+                                <rect key="frame" x="62" y="466" width="251" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="251" id="SK2-jB-G0b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                <state key="normal" title="Generate background color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="QAE-dO-YE9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yoh-Ep-beX" firstAttribute="width" secondItem="rHm-BZ-GpQ" secondAttribute="width" id="6iU-q1-VFC"/>
+                            <constraint firstItem="uzN-we-B5d" firstAttribute="top" secondItem="fQF-K7-Y4P" secondAttribute="topMargin" constant="8" id="A64-aq-j9j"/>
+                            <constraint firstItem="21C-9s-clw" firstAttribute="top" secondItem="XeT-jG-jUG" secondAttribute="bottom" constant="40" id="Fgc-2c-QF2"/>
+                            <constraint firstItem="ihw-Oc-HAE" firstAttribute="bottom" secondItem="tey-c9-KZZ" secondAttribute="bottom" constant="20" id="Fld-bq-Ubv"/>
+                            <constraint firstItem="XeT-jG-jUG" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="K6C-LV-a6e"/>
+                            <constraint firstItem="tey-c9-KZZ" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="NJJ-4F-gTb"/>
+                            <constraint firstItem="rHm-BZ-GpQ" firstAttribute="top" secondItem="21C-9s-clw" secondAttribute="bottom" constant="40" id="Rjf-Kg-uWj"/>
+                            <constraint firstItem="ryG-lf-FmQ" firstAttribute="top" secondItem="yoh-Ep-beX" secondAttribute="bottom" constant="4" id="Ui8-Ac-atY"/>
+                            <constraint firstItem="ihw-Oc-HAE" firstAttribute="trailing" secondItem="uzN-we-B5d" secondAttribute="trailing" constant="20" id="UxL-Hp-Fqx"/>
+                            <constraint firstItem="XeT-jG-jUG" firstAttribute="top" secondItem="ihw-Oc-HAE" secondAttribute="top" constant="40" id="bhZ-Gm-KfR"/>
+                            <constraint firstItem="rHm-BZ-GpQ" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="db1-cT-VWW"/>
+                            <constraint firstItem="yoh-Ep-beX" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="os9-zN-ToG"/>
+                            <constraint firstItem="ryG-lf-FmQ" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="uup-yy-4R5"/>
+                            <constraint firstItem="yoh-Ep-beX" firstAttribute="top" secondItem="rHm-BZ-GpQ" secondAttribute="top" id="vs7-6P-LF1"/>
+                            <constraint firstItem="21C-9s-clw" firstAttribute="centerX" secondItem="fQF-K7-Y4P" secondAttribute="centerX" id="xrm-ML-IhZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ihw-Oc-HAE"/>
+                    </view>
+                    <connections>
+                        <segue destination="NzH-a7-yLz" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="FtE-si-WuP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pg0-Fe-qDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="NzH-a7-yLz" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2400.8000000000002" y="-383.65817091454278"/>
         </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
