--- a/smackChat/Base.lproj/Main.storyboard
+++ b/smackChat/Base.lproj/Main.storyboard
@@ -263,7 +263,7 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NY3-Og-VBu">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NY3-Og-VBu" customClass="RoundedButton" customModule="smackChat" customModuleProvider="target">
                                 <rect key="frame" x="63" y="306" width="250" height="50"/>
                                 <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -274,6 +274,11 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -325,7 +330,7 @@
                                     <action selector="closePressed:" destination="4E5-HI-FYt" eventType="touchUpInside" id="pjY-Rh-aqZ"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tey-c9-KZZ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tey-c9-KZZ" customClass="RoundedButton" customModule="smackChat" customModuleProvider="target">
                                 <rect key="frame" x="62" y="597" width="250" height="50"/>
                                 <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -336,18 +341,13 @@
                                 <state key="normal" title="Create Account">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yoh-Ep-beX">
-                                <rect key="frame" x="137.5" y="332" width="100" height="130"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="130" id="zhx-jS-8yx"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
-                                <state key="normal" title="Choose avatar">
-                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="8w1-3j-8j9"/>
+                                    <action selector="createAccntPressed:" destination="4E5-HI-FYt" eventType="touchUpInside" id="B3m-Hi-eZ7"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="21C-9s-clw">
@@ -403,6 +403,20 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yoh-Ep-beX">
+                                <rect key="frame" x="137" y="332" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="zhx-jS-8yx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                <state key="normal" title="Choose avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="8w1-3j-8j9"/>
+                                    <action selector="pickAvatarPressed:" destination="4E5-HI-FYt" eventType="touchUpInside" id="COq-0J-Mu6"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="rHm-BZ-GpQ">
                                 <rect key="frame" x="137" y="332" width="100" height="100"/>
                                 <constraints>
@@ -421,6 +435,7 @@
                                 </state>
                                 <connections>
                                     <action selector="createAccntBtnPressed:" destination="4u6-lY-Xfx" eventType="touchUpInside" id="QAE-dO-YE9"/>
+                                    <action selector="pickBGColorPressed:" destination="4E5-HI-FYt" eventType="touchUpInside" id="Mms-i9-lWu"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -445,6 +460,10 @@
                         <viewLayoutGuide key="safeArea" id="ihw-Oc-HAE"/>
                     </view>
                     <connections>
+                        <outlet property="emailTxt" destination="0Gt-dv-PbR" id="MDB-VK-JL3"/>
+                        <outlet property="passwordTxt" destination="8P5-k8-WH8" id="PkC-sc-r9A"/>
+                        <outlet property="userImg" destination="rHm-BZ-GpQ" id="vWO-Du-iH5"/>
+                        <outlet property="usernameTxt" destination="EM9-VZ-aI3" id="lTX-de-Zja"/>
                         <segue destination="NzH-a7-yLz" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="FtE-si-WuP"/>
                     </connections>
                 </viewController>
